samples/_failures_safe/1761163238_ae67cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b320a5b1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b320a5b1.c:179:30: error: missing terminating ' character
  179 |             token.value[1] = '\
      |                              ^~
./samples/SAFE/__tmp_b320a5b1.c:179:13: error: expected expression at end of input
  179 |             token.value[1] = '\
      |             ^~~~~
./samples/SAFE/__tmp_b320a5b1.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b320a5b1.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b320a5b1.c:179:13: error: expected declaration or statement at end of input
